Mailing list added to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <div class="post">
 
+  {% include mailchimp.html %} 
+
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -13,6 +15,8 @@ layout: default
   </article>
 
 </div>
+
+{% include mailchimp.html %} 
 
  <div id="disqus_thread"></div>
     <script type="text/javascript">
