--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{{ "/css/lightbox.css" | prepend: site.baseurl }}">
   <script src="/resources/js/jquery-1.11.0.min.js"></script>
   <script src="/resources/js/lightbox.min.js"></script>
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
